FAQ links refactoring

--- a/imports/UI/moderation/collectiveModeration.html
+++ b/imports/UI/moderation/collectiveModeration.html
@@ -5,7 +5,7 @@
         <p class="has-text-centered">
             Participez à la modération collective pour améliorer Plexar !
             Chaque ajout, modification ou signalement est soumis à la validation de la communauté
-            <a class="icon has-text-primary" title="En savoir plus" id="infoCollectiveModeration">
+            <a class="icon has-text-primary" title="En savoir plus" href="/faq/collectiveModeration">
                 <i class="far fa-question-circle"></i>
             </a>
         </p>
