--- a/imports/UI/user/contributions.html
+++ b/imports/UI/user/contributions.html
@@ -23,7 +23,7 @@
                 <p class="has-text-centered">
                     <span class="is-family-code" style="font-size: 1.3rem;">{{displayPointsLeftUntilNextLevel}}</span>
                     <span style="font-size: 1.1rem;"> points nécessaires pour atteindre le prochain niveau</span>
-                    <a class="icon has-text-primary" title="En savoir plus" id="infoPointsAndLevels">
+                    <a class="icon has-text-primary" title="En savoir plus" href="/faq/pointsAndLevels">
                         <i class="far fa-question-circle"></i>
                     </a>
                 </p>
