--- a/imports/UI/messages/full.html
+++ b/imports/UI/messages/full.html
@@ -1,13 +1,15 @@
 <template name="full">
     {{#if messageToDisplay}}
-        <article class="message {{style}}">
-            <div class="message-header">
-                <p>{{headerContent}}</p>
-                <button class="delete" aria-label="delete"></button>
-            </div>
-            <div class="message-body">
-                <p>{{bodyContent}}</p>
-            </div>
-        </article>
+        {{#let message=messageToDisplay}}
+            <article class="message {{message.style}}">
+                <div class="message-header">
+                    <p>{{message.headerContent}}</p>
+                    <button class="delete" aria-label="delete"></button>
+                </div>
+                <div class="message-body">
+                    <p>{{message.bodyContent}}</p>
+                </div>
+            </article>
+        {{/let}}
     {{/if}}
 </template>
