--- a/imports/UI/search.html
+++ b/imports/UI/search.html
@@ -78,8 +78,8 @@
         <h5 class="title is-5 has-text-centered">Votre recherche n'a donné aucun résultat.</h5>
     {{/if}}
 
-    {{#each displayProductsResults}}
-        {{> productBanner}}
+    {{#each product in displayProductsResults}}
+        {{> productBanner product=product}}
     {{/each}}
 
 </template>
