"They talk about us" section added in about page

--- a/imports/UI/about.html
+++ b/imports/UI/about.html
@@ -42,4 +42,42 @@
             </div>
         </div>
     </div>
+
+    <hr>
+
+    <h3 class="title is-3 has-text-centered">Ils parlent de nous</h3>
+    <div class="columns has-text-centered">
+        <div class="column" style="display: flex; justify-content: center; align-items: center;">
+            <figure class="image is-128x128" style="margin: 0 auto;">
+                <a href="https://tv.ismaili/stemfestival/watch/plexar/" target="_blank">
+                    <!-- On mobile & tablet, the normal image is displayed -->
+                    <img class="is-rounded is-hidden-desktop" src="/stemFestival.jpg" alt="Ismaili STEM Festival">
+                    <!-- On desktop, we show a grey image & the real image on hover -->
+                    <img class="is-rounded is-hidden-touch filtered" src="/stemFestival.jpg" alt="Ismaili STEM Festival">
+                </a>
+            </figure>
+        </div>
+
+        <div class="column" style="display: flex; justify-content: center; align-items: center;">
+            <figure class="image is-128x128" style="margin: 0 auto; height: auto;">
+                <a href="http://www.lyc-ferry-conflans.ac-versailles.fr/843-2/" target="_blank">
+                    <!-- On mobile & tablet, the normal image is displayed -->
+                    <img class="is-rounded is-hidden-desktop" src="/lyceeJulesFerry.jpg" alt="Lycée Jules Ferry">
+                    <!-- On desktop, we show a grey image & the real image on hover -->
+                    <img class="is-rounded is-hidden-touch filtered" src="/lyceeJulesFerry.jpg" alt="Lycée Jules Ferry">
+                </a>
+            </figure>
+        </div>
+
+        <div class="column">
+            <figure class="image is-128x128" style="margin: 0 auto; height: auto;">
+                <a href="https://ecoclubjulesfe.herokuapp.com/article/plexar" target="_blank">
+                    <!-- On mobile & tablet, the normal image is displayed -->
+                    <img class="is-rounded is-hidden-desktop" src="/ecoClub.png" alt="Blog de l'Eco Club du Lycée Jules Ferry">
+                    <!-- On desktop, we show a grey image & the real image on hover -->
+                    <img class="is-rounded is-hidden-touch filtered" src="/ecoClub.png" alt="Blog de l'Eco Club du Lycée Jules Ferry">
+                </a>
+            </figure>
+        </div>
+    </div>
 </template>
